--- a/main.html
+++ b/main.html
@@ -8,6 +8,10 @@
 
 <body>
 	<!-- the entire body must be written by student -->
+	<h1>
+		Why I want to become a developer?
+	</h1>
+	<p>Because I am interested.</p>
     <script type="text/javascript" src="./script.js">
 </script>
 
