--- a/main.html
+++ b/main.html
@@ -11,9 +11,7 @@
 	<h1>
 		Why I want to become a developer?
 	</h1>
-	<p>"I've wanted to become a software developer for as long as I can remember. While I was growing up, both of my parents worked in technology-related fields. My father worked as a software engineer and my mother worked as an information technology analyst. They always encouraged me to enter science, technology, engineering and mathematics fields, and I'm very grateful I had that encouragement. In high school, I excelled in classes like calculus and physics, which reassured me that becoming a software developer was the right career choice for me.
-
-After high school, I obtained a bachelor's degree in computer science. While I originally intended to enter the workforce after my undergraduate years, I felt compelled to pursue additional education to contribute to the field of software development in the most productive way possible. I earned a master's degree in computer science. Now I feel prepared and excited to begin a career that I've been planning for since I was a child."</p>
+	<p>I want to become a software developer because</p></p>
     <script type="text/javascript" src="./script.js">
 </script>
 
