--- a/main.html
+++ b/main.html
@@ -8,10 +8,7 @@
 
 <body>
 	<!-- the entire body must be written by student -->
-	<h1>
-		Why I want to become a developer?
-	</h1>
-	<br>
+	<h1> Why I want to become a developer?</h1>
 	<p>I want to become a software developer because</p></p>
     <script type="text/javascript" src="./script.js">
 </script>
